# rule_engine_with_ast

./: .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
backend/: .env.sample  globalDS.py  main.py  pyproject.toml
backend/rule_engine/: abstract_tree.py  database.py  error.py  main.py  models.py  parser.py
backend/tests/: test_abstract_tree.py  test_parser.py
frontend/: README.md  package-lock.json  package.json
frontend/api/: route.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/_components/: rule-tree.tsx
frontend/app/api/: route.ts
